finished the CSS portion of project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prework Study Guide</title>
 </head>
+<link rel="stylesheet" href="./assets/style.css" />
 
 <body>
   <header id="top">
@@ -19,13 +20,22 @@
       <ul>
         <li>The head element contains information about the webpage.</li>
         <li>The body element represents the visible content shown to the user.</li>
+        <li>The general template for HTML is known as a boilerplate</li>
+        <li>You can pull up the boiler plate with the ! command</li>
+        <li>ul and ol are used for lists. Either with numbers or non numbered</li>
       </ul>
     </section>
 
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
+        <li>Colors can be chosen on the HEX rgb scale</li>
+        <li>you can move different things in CSS by using the PX which means Pixels</li>
+        <li>the command "box-shadow" will have a shadow casted however many pixels around the text box
+          assigned
+        </li>
       </ul>
     </section>
 
