updated the project to include javascript. This is beginner javascript

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <header id="top">
     <h1>Prework Study Guide</h1>
     <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
   </header>
   <main>
     <section class="card" id="html-section">
@@ -44,6 +45,10 @@
       <ul>
         <li>git status: checks what branch we are currently on</li>
         <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        <li>git add -A will stage the changes</li>
+        <li>git pull origin main will make sure our local branch is up to date</li>
+        <li>git push will push the changes made to git hub</li>
+
       </ul>
     </section>
 
@@ -58,6 +63,7 @@
   <footer>
     <p>I can code!</p>
   </footer>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
