finishing the javascript section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>You need to call a function after listing it</li>
+        <li>math random is used to call a random number which can be used to get a random if else statement</li>
+        <li>If else statements are used when a response is needed after triggering something</li>
       </ul>
     </section>
   </main>
